# therapy-transcript-pipeline

./: .env  .replit  AGENTS.md  README.md  accelerated_ai_completion.py  accelerated_completion.py  ai_completion_dashboard.py  ai_processing_monitor.py  ai_service.py  analytics_service.py  app.py  audit_notion_databases.py  background_ai_processor.py  background_tasks.py  batch_ai_processor.py  batch_complete_analysis.py  batch_completion_worker.py  batch_fix_transcripts.py  complete_ai_gap.py  complete_ai_processing.py  complete_all_client_analysis.py  complete_filename_fix.py  complete_may_2025_analysis.py  complete_may_processing.py  comprehensive_ai_completion.py  comprehensive_cleanup_and_analysis.py  config.py  continuous_ai_processor.py  create_kristi_database.py  create_notion_databases.py  dashboard.js  demo_two_clients.py  deployment_readiness.py  efficient_ai_completion.py  efficient_batch_processor.py  final_ai_processing.py  final_completion_strategy.py  final_filename_standardization.py  final_system_test.py  fix_ai_analysis.py  (+42 more)
attached_assets/: Accessibility and Responsiveness Validation_1749080907953.md  Pasted-Comprehensive-Clinical-Progress-Note-Generation-Prompt-Overview-You-are-an-expert-clinical-therapist-1749058702602.txt  Pasted-Comprehensive-Clinical-Progress-Note-for-Steven-Deluca-s-Therapy-Session-on-5-28-2025-SUBJECTIVE--1749058496250.txt  Pasted-Missing-progress-notes-Noah-Silverman-s-appointment-on-May-5-2025-Add-note-May-6-Missing-progres-1749166596796_1749166596798.txt  Theme Switching Mechanism Design_1749080907953.md  app.py  wsgi.py  (+24 more)
(+50 files in other folders)
